--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 	<section id="contact">
 		<h1>Contact</h1>
-		<form>
+		<form  action="traitement.php" method="POST">
 			<label for="name">Nom</label>
 			<input type="text" id="name" name="name" required>
 
