--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		</div>
 		<div class="right">
 			<h1>Présentation</h1>
-			<p>Bonjour je m'apelle Maxence Autefault et je suis étudiant en Informatique à l'Université de Bordeaux, 
-                ce site à pour but de présenter les différents projets que j'ai pu effectuer. Si vous interessez par mon profil , 
-                veuillez me contactez avec le formulaire situez en bas de la page ou en cliquant sur l'onglet "Contacter" dans le menu !</p>
+			<p>Bonjour je m'appelle Maxence Autefault et je suis étudiant en informatique à l'Université de Bordeaux, 
+                ce site a pour but de présenter les différents projets que j'ai pu effectuer. Si vous êtes interessé par mon profil , 
+                veuillez me contacter avec le formulaire situez en bas de la page ou en cliquant sur l'onglet "Contacter" dans le menu !</p>
 		</div>
 	</section>
 
