--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<h1>Projets</h1>
 		<h2>Odomo (java)</h2>
 		<div class="projet">
-			<img src="montagne_odomo.jpg" alt="Odomo">
+			<img src="montagne_odomo.jpg" alt="Odomo" class ="PhotoProjet">
 			<div class="description">
 				<p>Voici un projet java dont l'objectif était d'améliorer le code d'une station météo</p>
 				<p><b><u>Les difficultés rencontrer :</u></b> Compréhentions du code initiale</p>
