--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<ul>
 			<li><a href="#Menu">Présentation</a></li>
 			<li><a href="#Projet">Projets</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="mailto:maxenceautefault@gmail.com">Contact</a></li>
 		</ul>
 	</nav>
 
@@ -78,24 +78,6 @@
 				<img src="InstallationPoste.jpg" alt="Nextcloud">
 			</div>
 		</div>
-	</section>
-
-
-
-	<section id="contact">
-		<h1>Contact</h1>
-		<form  action="traitement.php" method="POST">
-			<label for="name">Nom</label>
-			<input type="text" id="name" name="name" required>
-
-			<label for="email">Email</label>
-			<input type="email" id="email" name="email" required>
-
-			<label for="message">Message</label>
-			<textarea id="message" name="message" required></textarea>
-
-			<input type="submit" value="Envoyer">
-		</form>
 	</section>
 </body>
 </html>
