--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		</div>
 		<div class="right">
 			<h1>Présentation</h1>
-			<p>Bonjour je m'appelle Maxence Autefault et je suis étudiant en informatique à l'Université de Bordeaux, 
-                ce site a pour but de présenter les différents projets que j'ai pu effectuer. Si vous êtes interessé par mon profil , 
+			<p>Je m'appelle Maxence Autefault et je suis étudiant en informatique à l'Université de Bordeaux.
+                 Ce site a pour but de présenter les différents projets que j'ai pu effectuer. Si vous êtes interessé par mon profil , 
                 veuillez me contacter avec le formulaire situez en bas de la page ou en cliquant sur l'onglet "Contacter" dans le menu !</p>
 		</div>
 	</section>
@@ -63,8 +63,8 @@
 			<div class="description">
 				<p>Voici un projet visant à créer un site pour cibler un persona fictif.</p>
 				<p><b><u>Les difficultés rencontrer :</u></b> Difficultés du design des différentes pages.</p>
-				<p><b><u>Mon ressenti :</u></b> Ce Projet était un projet était intéressant puisque, créer du code en HTML et en CSS 
-					n'est pas compliquer. Cela ma permis de développer mes compétences en création de page web</p>
+				<p><b><u>Mon ressenti :</u></b> Ce Projet était intéressant puisque créer du code en HTML et en CSS est 
+					plaisant. Cela ma permis de développer mes compétences en création de page web</p>
 					<img src="Web_Atos.jpg" alt="Web_Atos">
 			</div>
 		</div>
@@ -75,7 +75,20 @@
 			<div class="description">
 				<p>Voici le projet installation de poste, le but était de configurer un réseaux en adéquation avec la demande client.</p>
 				<p><b><u>Les difficultés rencontrer :</u></b> Adressage IP</p>
+				<p><b><u>Mon ressenti :</u></b> L'utilisation des différentes commandes n'était pas compliquée.</p>
 				<img src="InstallationPoste.jpg" alt="Nextcloud">
+			</div>
+		</div>
+
+		<h2>HyperStellar (c#)</h2>
+		<div class="projet">
+			<img src="Espace.jpg" alt="HyperStellar">
+			<div class="description">
+				<p>Voici le projet HyperStellar. Le but était de créer un jeu de plateau.</p>
+				<p><b><u>Les difficultés rencontrer :</u></b>Elaboration du code et des différentes classes</p>
+				<p><b><u>Mon ressenti :</u></b> Le c# n'est pas un language compliquée mais il était difficiles de respecter 
+				l'emploi du temps fixer par notre groupe.</p>
+				<img src="HyperStellar.jpg" alt="HyperStellar">
 			</div>
 		</div>
 	</section>
