--- a/index.html
+++ b/index.html
@@ -1,96 +1,202 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mon Portfolio</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
-</head>
-<body>
-	<section id="Menu"></section>
-	<nav>
-		<h1>Bienvenue dans mon Portfolio</h1>
-		<ul>
-			<li><a href="#Menu">Présentation</a></li>
-			<li><a href="#Projet">Projets</a></li>
-			<li><a href="mailto:maxenceautefault@gmail.com">Contact</a></li>
-		</ul>
-	</nav>
-
-	<section id="presentation">
-		<div class="left">
-			<img src="Image_Profil.jpg" alt="Ma photo">
-		</div>
-		<div class="right">
-			<h1>Présentation</h1>
-			<p>Je m'appelle Maxence Autefault et je suis étudiant en informatique à l'Université de Bordeaux.
-                 Ce site a pour but de présenter les différents projets que j'ai pu effectuer. Si vous êtes interessé par mon profil , 
-                veuillez me contacter avec le formulaire situez en bas de la page ou en cliquant sur l'onglet "Contacter" dans le menu !</p>
-		</div>
-	</section>
-
-	<section id="projets">
-		<section id="Projet"></section>
-		<h1>Projets</h1>
-		<h2>Odomo (java)</h2>
-		<div class="projet">
-			<img src="montagne_odomo.jpg" alt="Odomo" class ="PhotoProjet">
-			<div class="description">
-				<p>Voici un projet java dont l'objectif était d'améliorer le code d'une station météo</p>
-				<p><b><u>Les difficultés rencontrer :</u></b> Compréhentions du code initiale</p>
-				<p><b><u>Mon ressenti :</u></b> Ce Projet était mon premier projet Java et il était assez compliquer pour moi de comprendre 
-					le code néant moins, j'ai pris beaucoup de plaisir à développer mes compétences en Java.</p>
-				<img src="odomo_1.jpg" alt="Odomo">
-			</div>
-		</div>
-
-		<h2>Analyse ESN (sans language)</h2>
-		<div class="projet">
-			<img src="atos.jpg" alt="Atos">
-			<div class="description">
-				<p>Voici un projet visant à analyser et présenter une entreprise d'un point de vue externe</p>
-				<p><b><u>Les difficultés rencontrer :</u></b> Difficultés à trouver des informations</p>
-				<p><b><u>Mon ressenti :</u></b> Ce Projet était un projet sans language de programation 
-					et ma permis de développer mes compétences en travail d'équipe</p>
-				<a href="AnalyseAtos.pdf">Lien vers le pdf de l'analyse</a>
-			</div>
-		</div>
-
-		<h2>Projet WEB (html et css)</h2>
-		<div class="projet">
-			<img src="HTML_CSS.jpg" alt="Atos">
-			<div class="description">
-				<p>Voici un projet visant à créer un site pour cibler un persona fictif.</p>
-				<p><b><u>Les difficultés rencontrer :</u></b> Difficultés du design des différentes pages.</p>
-				<p><b><u>Mon ressenti :</u></b> Ce Projet était intéressant puisque créer du code en HTML et en CSS est 
-					plaisant. Cela ma permis de développer mes compétences en création de page web</p>
-					<img src="Web_Atos.jpg" alt="Web_Atos">
-			</div>
-		</div>
-
-		<h2>Installation de poste(shell)</h2>
-		<div class="projet">
-			<img src="Nextcloud_Logo.jpg " alt="NextCloud">
-			<div class="description">
-				<p>Voici le projet installation de poste, le but était de configurer un réseaux en adéquation avec la demande client.</p>
-				<p><b><u>Les difficultés rencontrer :</u></b> Adressage IP</p>
-				<p><b><u>Mon ressenti :</u></b> L'utilisation des différentes commandes n'était pas compliquée.</p>
-				<img src="InstallationPoste.jpg" alt="Nextcloud">
-			</div>
-		</div>
-
-		<h2>HyperStellar (c#)</h2>
-		<div class="projet">
-			<img src="Espace.jpg" alt="HyperStellar">
-			<div class="description">
-				<p>Voici le projet HyperStellar. Le but était de créer un jeu de plateau.</p>
-				<p><b><u>Les difficultés rencontrer :</u></b>Elaboration du code et des différentes classes</p>
-				<p><b><u>Mon ressenti :</u></b> Le c# n'est pas un language compliquée mais il était difficiles de respecter 
-				l'emploi du temps fixer par notre groupe.</p>
-				<img src="HyperStellar.jpg" alt="HyperStellar">
-			</div>
-		</div>
-	</section>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Maxence Autefault | PORTFOLIO</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="#page-top">Maxence Autefault</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container px-4 px-lg-5 h-100">
+                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-8 align-self-end">
+                        <h2 class="text-white font-weight-bold">"Measuring programming progree by lines of code is like measuring aircraft building progree by weight"</h2>
+                        <hr class="divider" />
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 mb-5">Bill Gates</p>
+                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- About-->
+        <section class="page-section bg-primary" id="about">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">IT Enthusiast</h2>
+                        <hr class="divider divider-light" />
+                        <p class="text-white-75 mb-4">Hello, I'm Maxence Autefault, a 19-year-old first-year student pursuing a Bachelor's in Information Technology (BUT IT). 
+                            Passionate about technology and innovation, I am eager to learn and master various aspects of IT, 
+                            from programming and network management to cybersecurity and database administration. 
+                            My goal is to leverage my skills to create impactful solutions and contribute to the ever-evolving tech landscape. Welcome to my portfolio, 
+                            where you can explore my projects, achievements, and aspirations in the field of IT.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio-->
+        <div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row g-0">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div><div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Contact-->
+        <section class="page-section" id="contact">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 col-xl-6 text-center">
+                        <h2 class="mt-0">Let's Get In Touch!</h2>
+                        <hr class="divider" />
+                        <p class="text-muted mb-5">Ready to start your next project with me? Send me a message and i will get back to you as soon as possible!</p>
+                    </div>
+                </div>
+                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+                    <div class="col-lg-6">
+                        <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="mailto:maxenceautefault@gmail.com">
+                            <!-- Submit Button-->
+                            <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton"
+                                stype="submit">Send Email</button></div>
+                        </form>
+                    </div>
+                </div>
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-4 text-center mb-5 mb-lg-0">
+                        <i class="bi-phone fs-2 mb-3 text-muted"></i>
+                        <div>06 59 01 98 64</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="bg-light py-5">
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Company Name</div></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- SimpleLightbox plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
 </html>
